updated bio text and fixed margin spacing on text below image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,9 +92,7 @@ main {
 
 #bottomtext {
     clear: both;
-    padding-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 25px;
+    margin: 25px 25px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
     line-height: 2;
